--- a/assets/src/admin/modules/_global.scss
+++ b/assets/src/admin/modules/_global.scss
@@ -9,7 +9,8 @@
 .sms_page_wp-sms-subscribers-group,
 .sms_page_wp-sms-settings.sms_page_wp-sms-pro,
 .sms_page_wp-sms-scheduled,
-.sms_page_wp-sms-commands {
+.sms_page_wp-sms-commands,
+{
 
   #wpcontent {
     padding: 0;
